--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+title: TKARCHER Blog
+page-title: 周恒的博客.
+home-title: 滴答滴答.
+description: 努力学习考研转计算机
 ---
 
 {% include header.html %}
