--- a/timeline.html
+++ b/timeline.html
@@ -2,8 +2,8 @@
 layout: default
 title: 时间线
 page-title: timeLine
-home-title: Sort by timeline.
-description:
+home-title: zhou的故事开始了.
+description:记录生活 记录心情
 ---
 
 {% include header.html %}
