--- a/timeline.html
+++ b/timeline.html
@@ -2,8 +2,8 @@
 layout: default
 title: 时间线
 page-title: timeLine
-home-title: zhou的故事开始了.
-description:记录生活 记录心情
+home-title: 故事开始了.
+description:记录生活记录心情
 ---
 
 {% include header.html %}
