--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: TKARCHER Blog
 page-title: 周恒的博客.
 home-title: 滴答滴答.
-description: 努力学习考研转计算机
+description: 走向头秃少年的道路
 ---
 
 {% include header.html %}
