--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: TKARCHER Blog
-page-title: 周恒的博客.
+page-title: TK的博客.
 home-title: 滴答滴答.
-description: 走向头秃少年的道路
+description: 正因为没有翅膀，才会寻找飞翔的方法
 ---
 
 {% include header.html %}
